k8s/db-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: demo-db
  namespace: demo
spec:
  serviceName: demo-db
  replicas: 1

  selector:
    matchLabels:
      app: demo-db

  template:
    metadata:
      labels:
        app: demo-db

    spec:
      containers:
        - name: postgres
          image: postgres:16

          ports:
            - containerPort: 5432

          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - $(POSTGRES_USER)
                - -d
                - $(POSTGRES_DB)
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 6

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 1Gi
