k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
  namespace: demo

spec:
  type: ClusterIP

  selector:
    app: demo-app

  ports:
    - port: 8080
      targetPort: 8080
