k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-db
  namespace: demo
spec:
  clusterIP: None

  selector:
    app: demo-db

  ports:
    - port: 5432
      targetPort: 5432
