k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ingress
  namespace: demo

spec:
  ingressClassName: nginx

  rules:
    - host: demo.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: demo-app-service
                port:
                  number: 8080
